src/objects/Commcare_Job_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Error_Emails__c</fullName>
        <label>Error Emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Domain_Job_Running__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Domain Job Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Job_Running__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Job Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Helper_Field__c</fullName>
        <label>Job Helper Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Start_Date__c</fullName>
        <label>Job Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Server_Code__c</fullName>
        <label>Server Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CommcareSyncJobSettings</label>
</CustomObject>